--- a/03-DOM&HandlingEvents/findingelements.html
+++ b/03-DOM&HandlingEvents/findingelements.html
@@ -12,7 +12,10 @@
 
     <script>
         // a JavaScript code here ...
-
+        console.log(document.getElementById("someTest").innerHTML);
+        console.log(document.getElementsByTagName("h1"));
+        console.log(document.getElementsByClassName("important"));
+        console.log(document.getElementsByTagName("p"));
     </script>
 </body>
 
