--- a/03-DOM&HandlingEvents/alter.html
+++ b/03-DOM&HandlingEvents/alter.html
@@ -4,10 +4,10 @@
 		<title>Pink Floyd</title>
 		<meta charset="UTF-8">
 	</head>
-	<body>
-		<h1>Another Brick in the Wall</h1>
-		<h3>Pink Floyd</h3>
-		<p>We don't need no education<br>
+	<body ondblclick="changeBg(this)">
+		<h1 onclick="addText(this)">Another Brick in the Wall</h1>
+		<h3 onclick="bandDesc()">Pink Floyd</h3>
+		<p onclick="toItalic(this)">We don't need no education<br>
 		We don't need no thought control<br>
 		No dark sarcasm in the classroom<br>
 		Teachers leave them kids alone<br>
@@ -15,13 +15,25 @@
 		All in all it's just another brick in the wall<br>
 		All in all you're just another brick in the wall</p>
 		
-		<p style="visibility: hidden;">Pink Floyd were an English rock band formed in London.<br>
+		<p id="1" style="visibility: hidden;">Pink Floyd were an English rock band formed in London.<br>
 		They achieved international acclaim with their progressive<br>
 		and psychedelic music.</p>
 		
 		<script>
 			// a JavaScript code here ...
-			
+			function addText(element){
+				var text = document.createTextNode(" (Part 2)");
+				element.appendChild(text);
+			}
+			function bandDesc(){
+				document.getElementById("1").style.visibility="visible";
+			}
+			function toItalic(element){
+				element.style.fontStyle="italic";
+			}
+			function changeBg(element){
+				element.style.backgroundColor="yellow";
+			}
 		</script>
 	</body>
 </html>
