--- a/03-DOM&HandlingEvents/translate.html
+++ b/03-DOM&HandlingEvents/translate.html
@@ -5,11 +5,15 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
-		<h3 onmouseover="textPL(this)">Sticks and stones may break my bones, but words will never harm me.</h3>
+		<h3 onmouseover="textPL(this)" onmouseout="textEN(this)" >Sticks and stones may break my bones, but words will never harm me.</h3>
 		<script>
+			function textEN(element){
+				element.innerHTML ="Sticks and stones may break my bones, but words will never harm me."
+			}
 			function textPL(element){
 				element.innerHTML = "Kije i kamienie kości mi połamią, ale twoje słowa nigdy mnie nie zranią"
 			}
+			
 		</script>
 	</body>
 </html>
