--- a/04-JSON&DataTransfer/student.html
+++ b/04-JSON&DataTransfer/student.html
@@ -7,11 +7,25 @@
 	<body>
 		<h1>Student</h1>
 		<p>Open a console and then click the button</p>
-		<input type="button" value="Display student's data">
+		<input type="button" value="Display student's data" onclick="place()">
 		<p id="personalData"></p>
 
 		<script>
+			function place(){
+				fetch('student.json')
+				.then(function (response) {
+					return response.json();
+				})
+				.then(function (data) {
+					document.getElementById("personalData").innerHTML = data[0].name + ' ' + data[0].surname;
+				})
+				.catch(function (err) {
+					console.log('error: ' + err);
+				});
+			}
 
+			
+			
 		</script>
 
 	</body>
