--- a/05-VueFundamentals/product.html
+++ b/05-VueFundamentals/product.html
@@ -4,7 +4,19 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-  <h1>Grades</h1>    
+  <div id="app">
+    <p><b>RECEIPT</br>
+      <span v-for="item in 15">{{product.separation1}} </span>
+      </b></br>
+      Product: {{product.name}}</br>
+      Unit Price: {{product.unitPrice}} zł</br>
+      Quantity: {{product.quantity}}</br>
+      Amount: {{product.unitPrice*product.quantity}} zł</br>
+      VAT Tax Rate: {{product.VAT}}%</br>
+      <span v-for="item in 11">{{product.separation2}} </span></br>
+      <b>Total: {{total()}} zł</b>
+    </p>
+  </div>    
 
   <script>
     var app = new Vue({
@@ -12,9 +24,18 @@
       data: {
         product: {
           name: 'book',
-          unitPrice: 17.5,
+          unitPrice: 17,
           quantity: 3,
-          VAT: 23
+          VAT: 23,
+          separation1: '-',
+          separation2: '='
+        }
+      },
+      methods: {
+        total: function(){
+          amount = this.product.unitPrice*this.product.quantity
+          total = (amount * this.product.VAT / 100) + amount
+          return total.toFixed(2)
         }
       }
     });
