--- a/05-VueFundamentals/chart.html
+++ b/05-VueFundamentals/chart.html
@@ -1,37 +1,78 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-</head>
-<body>
-  <script>
-    var app = new Vue({
-      el: '#app',
-      data: {
-        films: [
-          {
-            language: 'Python',
-            popularity: 25.95
-          },
-          {
-            language: 'Java',
-            popularity: 21.42
-          },
-          {
-            language: 'JavaScript',
-            popularity: 8.26
-          },
-          {
-            language: 'C#',
-            popularity: 7.62
-          },
-          {
-            language: 'Php',
-            popularity: 7.37
-          }
-        ] 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+  </head>
+  <body>
+    <div id="app">
+      <canvas id="chart" width="250" height="80"></canvas>
+    </div>
+
+    <script>
+      var app = new Vue({
+        el: '#app',
+        data: {
+          languages: [
+            {
+              language: 'Python',
+              popularity: 25.95
+            },
+            {
+              language: 'Java',
+              popularity: 21.42
+            },
+            {
+              language: 'JavaScript',
+              popularity: 8.26
+            },
+            {
+              language: 'C#',
+              popularity: 7.62
+            },
+            {
+              language: 'Php',
+              popularity: 7.37
+            }
+          ] 
+        },
+      });
+
+      let myChart = document.getElementById("chart").getContext("2d")
+      let chartLabels = []
+      let chartData = []
+
+      for(lang of app.languages){
+        chartLabels.push(lang.language)
+        chartData.push(lang.popularity)
       }
-    });
-  </script>
-</body>
+
+      let chart = new Chart(myChart, {
+              type: "bar",
+              data: {
+                labels: chartLabels,
+                datasets:[{
+                  label: "Value",
+                  data: chartData,
+                  backgroundColor: [
+                            'rgba(212, 94, 132, 0.2)',
+                            'rgba(54, 162, 155, 0.2)',
+                            'rgba(255, 206, 86, 0.2)',
+                            'rgba(75, 112, 134, 0.2)',
+                            'rgba(75, 192, 192, 0.2)',
+                          ],
+                  borderColor: [
+                            'rgba(212, 94, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 112, 134, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            ],
+                  borderWidth: 1
+                }]
+              },
+              options: {}
+            })
+    </script>
+  </body>
 </html>
