--- a/05-VueFundamentals/company.html
+++ b/05-VueFundamentals/company.html
@@ -2,8 +2,23 @@
 <html>
 <head>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
+  <h1>Business Card</h1>
+  <div id="app">
+    <center>
+      <div class="card" style="width: 25rem;">
+        <div class="card-body">
+          <b>{{company.toUpperCase()}}</b></br>
+          {{address}}</br>
+          {{postcode}} {{city}}</br>
+          tel. {{ landline }}, {{ mobile }}</br>
+          <a v-bind:href="web">{{ web }}</a>
+        </div>
+      </div>
+    </center>
+  </div>
   <script>
     var app = new Vue({
       el: '#app',
