--- a/05-VueFundamentals/todo.html
+++ b/05-VueFundamentals/todo.html
@@ -4,6 +4,12 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
+  <div id="app">
+    <h2>Do wykonania</h2>
+    <ol>
+      <li v-for="item in sorted">{{item}}</li>
+    </ol>
+  </div>
   <script>
     var app = new Vue({
       el: '#app',
@@ -12,8 +18,13 @@
           'Purchase two tickets to cinema',
           'Feed cat',
           'Pay cable bill',
-          'Go shopping'
-      }
+          'Go shopping',
+      ]},
+      computed: {
+        sorted: function() {
+          this.todo.sort()
+          return this.todo
+      }}
     });
   </script>
 
